force-app/main/default/objects/Account/fields/Ano_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Ano_Onboarding__c</fullName>
    <label>Ano Onboarding</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>