force-app/main/default/objects/Account/fields/Area_de_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Area_de_Negocio__c</fullName>
    <inlineHelpText>Favor adicionar o nome da sua Unidade de Negócio, caso seja um cliente para a mesma.</inlineHelpText>
    <label>Área de Negócio</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AreasNegocio</valueSetName>
    </valueSet>
</CustomField>