force-app/main/default/objects/Account/fields/Atualizacao_Faturamento__c.field-meta.xml
<CustomField>
    <fullName>Atualizacao_Faturamento__c</fullName>
    <label>Atualização Faturamento</label>
    <type>Date</type>
</CustomField>