force-app/main/default/objects/Account/fields/Avalia_o_CX_Bases__c.field-meta.xml
<CustomField>
    <fullName>Avalia_o_CX_Bases__c</fullName>
    <label>Avaliação CX Bases</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>