force-app/main/default/objects/Account/fields/Bloqueado__c.field-meta.xml
<CustomField>
    <fullName>Bloqueado__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Bloqueado</label>
    <type>Checkbox</type>
</CustomField>