force-app/main/default/objects/Account/fields/CAR_em_Aberto__c.field-meta.xml
<CustomField>
    <fullName>CAR_em_Aberto__c</fullName>
    <description>Input dado pelo financeiro do CAR em aberto na data de atualização.</description>
    <label>CAR em Aberto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>