force-app/main/default/objects/Account/fields/CAR_Vencido__c.field-meta.xml
<CustomField>
    <fullName>CAR_Vencido__c</fullName>
    <description>Input dado pelo financeiro do CAR vencido na data de atualização</description>
    <label>CAR Vencido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>