force-app/main/default/objects/Account/fields/CAR_Vencido_mais30_dias__c.field-meta.xml
<CustomField>
    <fullName>CAR_Vencido_mais30_dias__c</fullName>
    <description>Input dado pelo financeiro do CAR vencido a mais de 30 dias na data de atualização</description>
    <label>CAR Vencido (&gt;30 dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>