force-app/main/default/objects/Account/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <defaultValue>&quot;-&quot;</defaultValue>
    <description>Campo criado a pedido da Agência para categorizar seus clientes</description>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clientes - Customers</fullName>
            </value>
            <value>
                <fullName>Clientes - Prospects</fullName>
            </value>
            <value>
                <fullName>Clientes - Targets</fullName>
            </value>
            <value>
                <fullName>Não Cliente - Broker</fullName>
            </value>
            <value>
                <fullName>Não Cliente - Agência</fullName>
            </value>
            <value>
                <fullName>Não Cliente - Freight Forwarder</fullName>
            </value>
            <value>
                <fullName>Não Cliente - Outros</fullName>
            </value>
            <value>
                <fullName>-</fullName>
                <isActive>false</isActive>
                <label>-</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>