force-app/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Campo para categorizar as contas oriundas de inovação</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Innovation</fullName>
            </value>
            <value>
                <fullName>Strategic Fit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>