force-app/main/default/objects/Account/fields/Classificacao_de_Risco__c.field-meta.xml
<CustomField>
    <fullName>Classificacao_de_Risco__c</fullName>
    <description>Input dado pelo financeiro da classificação de risco da conta</description>
    <label>Classificação de Risco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>