force-app/main/default/objects/Account/fields/Cliente_Zona_Risco__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Zona_Risco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente em Zona de Risco</label>
    <type>Checkbox</type>
</CustomField>