force-app/main/default/objects/Account/fields/Comissaria__c.field-meta.xml
<CustomField>
    <fullName>Comissaria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo destinado a identificar se essa conta é uma comissária.</description>
    <inlineHelpText>Marque o checkbox caso esta conta seja uma comissária!</inlineHelpText>
    <label>Comissária</label>
    <type>Checkbox</type>
</CustomField>