force-app/main/default/objects/Account/fields/Comissaria_Despacho__c.field-meta.xml
<CustomField>
    <fullName>Comissaria_Despacho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comissária de Despacho</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Comissária de Despacho</relationshipLabel>
    <relationshipName>Contas</relationshipName>
    <type>Lookup</type>
</CustomField>