force-app/main/default/objects/Account/fields/Complemento_do_Endereco__c.field-meta.xml
<CustomField>
    <fullName>Complemento_do_Endereco__c</fullName>
    <description>Complemento do Endereço</description>
    <label>Complemento</label>
    <type>TextArea</type>
</CustomField>