force-app/main/default/objects/Account/fields/Concorrente_Negocios_WS__c.field-meta.xml
<CustomField>
    <fullName>Concorrente_Negocios_WS__c</fullName>
    <label>Concorrente nos Negócios WS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agencia</fullName>
            </value>
            <value>
                <fullName>Brasco</fullName>
            </value>
            <value>
                <fullName>Estaleiros</fullName>
            </value>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Novos Negócios</fullName>
            </value>
            <value>
                <fullName>Rebocadores</fullName>
            </value>
            <value>
                <fullName>Tecon Rio Grande</fullName>
            </value>
            <value>
                <fullName>Tecon Salvador</fullName>
            </value>
            <value>
                <fullName>Logística, Novos Negócios, Tecon Salvador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>