force-app/main/default/objects/Account/fields/ContratoAtivo__c.field-meta.xml
<CustomField>
    <fullName>ContratoAtivo__c</fullName>
    <description>Conta com contrato ativo</description>
    <label>Contrato Ativo</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Fechamento da Oportunidade - Ganha</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Contract_Status__c</field>
        <operation>equals</operation>
        <value>Contract in Force, Renewed Contract</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Tipo_Contrato__c</field>
        <operation>equals</operation>
        <value>Commercial Agreement, Regular</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Rebocadores</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>