force-app/main/default/objects/Account/fields/Contratos_Renovacao_Base__c.field-meta.xml
<CustomField>
    <fullName>Contratos_Renovacao_Base__c</fullName>
    <label>Contratos em Renovação Base</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Bases de Apoio Offshore</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Prospecção / Pedido do Cliente, Desenvolvimento da Oportunidade, Elaboração da Proposta, Proposta Entregue, Negociação da Proposta</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>