force-app/main/default/objects/Account/fields/ContratosemRenovacao__c.field-meta.xml
<CustomField>
    <fullName>ContratosemRenovacao__c</fullName>
    <label>Contratos em Renovação</label>
    <summaryFilterItems>
        <field>Opportunity.Tipo_Contrato__c</field>
        <operation>contains</operation>
        <value>Contract, Commercial Agreement, Regular</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Prospecção / Pedido do Cliente, Desenvolvimento da Oportunidade, Elaboração da Proposta, Proposta Entregue, Negociação da Proposta</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Rebocadores</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>