force-app/main/default/objects/Account/fields/Criada_por_Lead__c.field-meta.xml
<CustomField>
    <fullName>Criada_por_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de controle para indicar se a conta foi gerada na conversão de um Lead</description>
    <label>Criada por Lead</label>
    <type>Checkbox</type>
</CustomField>