force-app/main/default/objects/Account/fields/Data_desbloqueio__c.field-meta.xml
<CustomField>
    <fullName>Data_desbloqueio__c</fullName>
    <label>Data desbloqueio</label>
    <type>DateTime</type>
</CustomField>