force-app/main/default/objects/Account/fields/DescricaoArmador__c.field-meta.xml
<CustomField>
    <fullName>DescricaoArmador__c</fullName>
    <label>Descrição do Armador</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>