force-app/main/default/objects/Account/fields/DescricaoArmadorRG__c.field-meta.xml
<CustomField>
    <fullName>DescricaoArmadorRG__c</fullName>
    <label>Terminal Rio Grande</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>