force-app/main/default/objects/Account/fields/DescricaoArmadorTSV__c.field-meta.xml
<CustomField>
    <fullName>DescricaoArmadorTSV__c</fullName>
    <label>Terminal Salvador</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>