force-app/main/default/objects/Account/fields/DominiosEmail__c.field-meta.xml
<CustomField>
    <fullName>DominiosEmail__c</fullName>
    <description>Dominio usado para identificacao automatica por e-mail no nivel principal da hierarquia.</description>
    <label>Domínio E-mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>