force-app/main/default/objects/Account/fields/Dono_da_Conta_WS_Log_stica__c.field-meta.xml
<CustomField>
    <fullName>Dono_da_Conta_WS_Log_stica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dono da Conta WS Logística</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Area_Negocio__c</field>
            <operation>equals</operation>
            <value>Logística - Plataforma NE, Logística - Plataforma SE</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>