force-app/main/default/objects/Account/fields/Due_Date_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Restriction__c</fullName>
    <label>Due Date Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>7 days</fullName>
            </value>
            <value>
                <fullName>15 days</fullName>
            </value>
            <value>
                <fullName>20 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>