force-app/main/default/objects/Account/fields/ExibirDominio__c.field-meta.xml
<CustomField>
    <fullName>ExibirDominio__c</fullName>
    <formula>OR(ISPICKVAL(Type,&quot;Grupo Econômico&quot;),  ISBLANK(Parent.Id ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exibir Domínio</label>
    <type>Checkbox</type>
</CustomField>