force-app/main/default/objects/Account/fields/Faturamento_Anualizado__c.field-meta.xml
<CustomField>
    <fullName>Faturamento_Anualizado__c</fullName>
    <description>Input dado pelo financeiro do faturamento em 12 meses</description>
    <label>Faturamento Anualizado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>