force-app/main/default/objects/Account/fields/Gerente_Conta_Tecon_Rio_Grande__c.field-meta.xml
<CustomField>
    <fullName>Gerente_Conta_Tecon_Rio_Grande__c</fullName>
    <label>Gerente de Conta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Daiana Valin</fullName>
                <isActive>false</isActive>
                <label>Daiana Valin</label>
            </value>
            <value>
                <fullName>Débora Barboza</fullName>
                <isActive>false</isActive>
                <label>Débora Barboza</label>
            </value>
            <value>
                <fullName>Luciane Vincenzi</fullName>
            </value>
            <value>
                <fullName>Marina Vidal</fullName>
                <isActive>false</isActive>
                <label>Marina Vidal</label>
            </value>
            <value>
                <fullName>Osvaldo Prestes</fullName>
            </value>
            <value>
                <fullName>Richard Almeida</fullName>
            </value>
            <value>
                <fullName>Rodrigo Brunetto</fullName>
            </value>
            <value>
                <fullName>Rodrigo Velho</fullName>
            </value>
            <value>
                <fullName>Samuel Pereira</fullName>
                <isActive>false</isActive>
                <label>Samuel Pereira</label>
            </value>
            <value>
                <fullName>Thiago Novais</fullName>
            </value>
            <value>
                <fullName>Treice Grunberg</fullName>
            </value>
            <value>
                <fullName>Victor Licastro</fullName>
                <isActive>false</isActive>
                <label>Victor Licastro</label>
            </value>
            <value>
                <fullName>Vinicius Barros</fullName>
                <isActive>false</isActive>
                <label>Vinicius Barros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>