force-app/main/default/objects/Account/fields/Gerente_da_Conta_Tecon_Salvador__c.field-meta.xml
<CustomField>
    <fullName>Gerente_da_Conta_Tecon_Salvador__c</fullName>
    <label>Gerente de Conta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bruno Souza</fullName>
            </value>
            <value>
                <fullName>Cléo Maryan Rodriguez</fullName>
            </value>
            <value>
                <fullName>Karoline Torres</fullName>
            </value>
            <value>
                <fullName>Maicon Silva Sousa</fullName>
            </value>
            <value>
                <fullName>Mayron Kaneko</fullName>
            </value>
            <value>
                <fullName>Patricia Muiños</fullName>
            </value>
            <value>
                <fullName>Renata Silva</fullName>
            </value>
            <value>
                <fullName>Robert Castro</fullName>
            </value>
            <value>
                <fullName>Vanessa Queiroz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>