force-app/main/default/objects/Account/fields/Grupo_Economico_Financeiro__c.field-meta.xml
<CustomField>
    <fullName>Grupo_Economico_Financeiro__c</fullName>
    <description>Input dado pelo financeiro</description>
    <label>Grupo Econômico Financeiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>