force-app/main/default/objects/Account/fields/Hub__c.field-meta.xml
<CustomField>
    <fullName>Hub__c</fullName>
    <label>Hubs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cubo Itau</fullName>
            </value>
            <value>
                <fullName>Startup Wharf</fullName>
            </value>
            <value>
                <fullName>Fábrica de Startups</fullName>
            </value>
            <value>
                <fullName>theDOCK</fullName>
            </value>
            <value>
                <fullName>Píer71</fullName>
            </value>
            <value>
                <fullName>100Open Startup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>