force-app/main/default/objects/Account/fields/Id_Extero__c.field-meta.xml
<CustomField>
    <fullName>Id_Extero__c</fullName>
    <externalId>true</externalId>
    <label>Id Extero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>