force-app/main/default/objects/Account/fields/Id_Tugsys_Commercial_Group__c.field-meta.xml
<CustomField>
    <fullName>Id_Tugsys_Commercial_Group__c</fullName>
    <label>Id Tugsys Commercial Group</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>