force-app/main/default/objects/Account/fields/Id_Zendesk_Org__c.field-meta.xml
<CustomField>
    <fullName>Id_Zendesk_Org__c</fullName>
    <label>Id Zendesk Org</label>
    <length>20</length>
    <type>Text</type>
</CustomField>