force-app/main/default/objects/Account/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ao selecionar o box indica que é um cliente estratégico</description>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>