force-app/main/default/objects/Account/fields/Key_Account_Rebocadores_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Rebocadores_Shadow__c</fullName>
    <label>Shadow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Key_Account_Rebocadores</valueSetName>
    </valueSet>
</CustomField>