force-app/main/default/objects/Account/fields/Line_Up_Type_Account__c.field-meta.xml
<CustomField>
    <fullName>Line_Up_Type_Account__c</fullName>
    <defaultValue>&quot;OW&quot;</defaultValue>
    <description>Campo de Rebocadores</description>
    <label>Line Up Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AQ</fullName>
            </value>
            <value>
                <fullName>OW</fullName>
                <default>true</default>
                <label>OW</label>
            </value>
            <value>
                <fullName>SO</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
            <value>
                <fullName>NV</fullName>
            </value>
            <value>
                <fullName>MK</fullName>
            </value>
            <value>
                <fullName>OD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>