force-app/main/default/objects/Account/fields/Maiores_Importadores__c.field-meta.xml
<CustomField>
    <fullName>Maiores_Importadores__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maiores Importadores</label>
    <type>Checkbox</type>
</CustomField>