force-app/main/default/objects/Account/fields/Nivel_de_Conta__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_Conta__c</fullName>
    <label>Nível de Conta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grande Cliente</fullName>
            </value>
            <value>
                <fullName>Médio Cliente</fullName>
            </value>
            <value>
                <fullName>Pequeno Cliente</fullName>
            </value>
            <value>
                <fullName>A Desenvolver</fullName>
            </value>
            <value>
                <fullName>Agentes e Despachantes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>