force-app/main/default/objects/Account/fields/Outro_descreva__c.field-meta.xml
<CustomField>
    <fullName>Outro_descreva__c</fullName>
    <label>Outro (descreva)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>