force-app/main/default/objects/Account/fields/PermitirAgendamentoRecorrente__c.field-meta.xml
<CustomField>
    <fullName>PermitirAgendamentoRecorrente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Habilita uso de rotina de criacao recorrente de Casos para a conta.</description>
    <label>Permitir Agendamento Recorrente</label>
    <type>Checkbox</type>
</CustomField>