force-app/main/default/objects/Account/fields/Prazo_Medio_Inadimplencia_Dias__c.field-meta.xml
<CustomField>
    <fullName>Prazo_Medio_Inadimplencia_Dias__c</fullName>
    <description>Input dado pelo financeiro do prazo médio de inadimplência</description>
    <label>Prazo Médio Inadimplência (Dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>