force-app/main/default/objects/Account/fields/Relat_rio_CX_Bases__c.field-meta.xml
<CustomField>
    <fullName>Relat_rio_CX_Bases__c</fullName>
    <defaultValue>$Profile.Name</defaultValue>
    <label>Relatório CX Bases</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>