force-app/main/default/objects/Account/fields/Renovacao_Andamento_Base__c.field-meta.xml
<CustomField>
    <fullName>Renovacao_Andamento_Base__c</fullName>
    <formula>Contratos_Renovacao_Base__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renovação em Andamento Base</label>
    <type>Checkbox</type>
</CustomField>