force-app/main/default/objects/Account/fields/RenovacaoAndamento__c.field-meta.xml
<CustomField>
    <fullName>RenovacaoAndamento__c</fullName>
    <formula>IF(RenovacaoemAndamento__c, &apos;SIM&apos;, &apos;NÃO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renovação em andamento</label>
    <type>Text</type>
</CustomField>