force-app/main/default/objects/Account/fields/RenovacaoemAndamento__c.field-meta.xml
<CustomField>
    <fullName>RenovacaoemAndamento__c</fullName>
    <formula>ContratosemRenovacao__c &gt; 0 = true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renovação em Andamento</label>
    <type>Checkbox</type>
</CustomField>