force-app/main/default/objects/Account/fields/rollup_atuacoes__c.field-meta.xml
<CustomField>
    <fullName>rollup_atuacoes__c</fullName>
    <label>rollup atuações</label>
    <summaryForeignKey>Atuacao__c.Conta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>