force-app/main/default/objects/Account/fields/Segmenta_Especifica_Brasco__c.field-meta.xml
<CustomField>
    <fullName>Segmenta_Especifica_Brasco__c</fullName>
    <label>Segmentação Específica Brasco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Petrobrás</fullName>
            </value>
            <value>
                <fullName>Oil Company</fullName>
            </value>
            <value>
                <fullName>OSC - Armador</fullName>
            </value>
            <value>
                <fullName>OSC - Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>