force-app/main/default/objects/Account/fields/Segmenta_Especifica_Logistica__c.field-meta.xml
<CustomField>
    <fullName>Segmenta_Especifica_Logistica__c</fullName>
    <label>Segmentação Específica Logística</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agente de Carga</fullName>
                <isActive>false</isActive>
                <label>Agente de Carga</label>
            </value>
            <value>
                <fullName>Ambev</fullName>
            </value>
            <value>
                <fullName>Automotivo</fullName>
            </value>
            <value>
                <fullName>Bebidas/Alimentos</fullName>
            </value>
            <value>
                <fullName>Bens de Consumo/Varejo</fullName>
            </value>
            <value>
                <fullName>Bens Industriais</fullName>
            </value>
            <value>
                <fullName>Comissária de Despacho</fullName>
                <isActive>false</isActive>
                <label>Comissária de Despacho</label>
            </value>
            <value>
                <fullName>Construção</fullName>
            </value>
            <value>
                <fullName>Cosméticos/Perfumaria</fullName>
            </value>
            <value>
                <fullName>Embarcador</fullName>
                <isActive>false</isActive>
                <label>Embarcador</label>
            </value>
            <value>
                <fullName>Energia/Solar</fullName>
            </value>
            <value>
                <fullName>Exportador</fullName>
                <isActive>false</isActive>
                <label>Exportador</label>
            </value>
            <value>
                <fullName>Importador</fullName>
                <isActive>false</isActive>
                <label>Importador</label>
            </value>
            <value>
                <fullName>Indústria</fullName>
                <isActive>false</isActive>
                <label>Indústria</label>
            </value>
            <value>
                <fullName>Life Science</fullName>
            </value>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Maquinário</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Partes e Peças</fullName>
            </value>
            <value>
                <fullName>Químico</fullName>
            </value>
            <value>
                <fullName>Tecnologia/Elet. Eletrônico</fullName>
            </value>
            <value>
                <fullName>Trading</fullName>
                <isActive>false</isActive>
                <label>Trading</label>
            </value>
            <value>
                <fullName>Trading/Ag. Carga/Armador/P.F.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>