force-app/main/default/objects/Account/fields/Segmenta_o_espec_fica_agencia__c.field-meta.xml
<CustomField>
    <fullName>Segmenta_o_espec_fica_agencia__c</fullName>
    <label>Segmentação específica Agencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aço</fullName>
            </value>
            <value>
                <fullName>Açúcar</fullName>
            </value>
            <value>
                <fullName>Armador</fullName>
            </value>
            <value>
                <fullName>Carvão</fullName>
            </value>
            <value>
                <fullName>Celulose</fullName>
            </value>
            <value>
                <fullName>Fertilizantes</fullName>
            </value>
            <value>
                <fullName>Grãos</fullName>
            </value>
            <value>
                <fullName>Liquidos</fullName>
            </value>
            <value>
                <fullName>Madeira</fullName>
            </value>
            <value>
                <fullName>Minério</fullName>
            </value>
            <value>
                <fullName>Quimicos</fullName>
            </value>
            <value>
                <fullName>Nenhum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>