force-app/main/default/objects/Account/fields/Segmenta_Wilson__c.field-meta.xml
<CustomField>
    <fullName>Segmenta_Wilson__c</fullName>
    <label>Segmentação Wilson</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Armador Liner</fullName>
            </value>
            <value>
                <fullName>Armador Tramp</fullName>
            </value>
            <value>
                <fullName>Embarcador Carga Não Conteinerizada</fullName>
            </value>
            <value>
                <fullName>Embarcador Contêiner</fullName>
            </value>
            <value>
                <fullName>Estaleiro</fullName>
            </value>
            <value>
                <fullName>Intermediário de Carga</fullName>
            </value>
            <value>
                <fullName>Óleo &amp; Gás</fullName>
            </value>
            <value>
                <fullName>Recebedor Carga Não Conteinerizada</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>