force-app/main/default/objects/Account/fields/Segmentacao_Especifica_Rebocadores__c.field-meta.xml
<CustomField>
    <fullName>Segmentacao_Especifica_Rebocadores__c</fullName>
    <label>Segmentação Específica Rebocadores</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agência</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Interfaturamento</fullName>
            </value>
            <value>
                <fullName>Liner</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Petrobrás</fullName>
            </value>
            <value>
                <fullName>Tramp com Contrato</fullName>
            </value>
            <value>
                <fullName>Tramp sem Contrato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>